Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-6773

JSON docs with formerly reserved keys display incorrectly in the UI

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 2.0
    • None
    • UI
    • Security Level: Public
    • None
    • 2.0 beta on OS X 10.8.2

    Description

      I'm using the Go Couchbase library to store JSON docs. Works fine, but I noticed that in the Couchbase web UI the docs don't always show up as JSON:

      • In the listing of the documents in the bucket, the "Content" column correctly shows the contents as syntax-highlighted JSON.
      • But when I click on a document's "Edit Document" button, the contents are shown as Base64.
      • In the view editor's "random document" display, the docs show up as base64 in the left pane but the JSON data shows up on individual lines in the right pane.

      Aaron thinks something is misinterpreting the content-meta bits, possibly not filtering out the Snappy bit (0x80) and thinking the doc isn't JSON. Here's the couch_dbdump output of one such document:

      Doc seq: 7
      id: foo:doc1
      rev: 13
      content_meta: 128
      cas: 42427677813197, expiry: 0, flags: 0
      data: (snappy) {"_rev":"1-2d70b62dfb1c93148cacb4dcf6ab71ec01b34171","_revmap":

      {"parents":[-1],"revs":["1-2d70b62dfb1c93148cacb4dcf6ab71ec01b34171"]}

      ,"hi":"there"}

      Attachments

        For Gerrit Dashboard: MB-6773
        # Subject Branch Project Status CR V

        Activity

          People

            aaron Aaron Miller (Inactive)
            jens Jens Alfke
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty