MB-6773 Follow new JSON rules

* There are no longer reserved field prefixes.
 * We allow any JSON value, not just arrays or objects.

from_binary is also used mostly by the CAPI layer, in order to get a doc
record from a ID/Body pair, and should not bother compressing docs, as
they will immediately be decompressed anyway.

Change-Id: Ib1d1dbeffd0d05cd91c86078ec84cbd4410b05dc
Reviewed-on: http://review.couchbase.org/21324
Reviewed-by: Damien Katz <damien@couchbase.com>
Reviewed-by: Filipe David Borba Manana <fdmanana@gmail.com>
Tested-by: Aaron Miller <apage43@ninjawhale.com>