src/ejson/ejson.erl
@@ -11,7 +11,7 @@
 % the License.
 
 -module(ejson).
--export([encode/1, decode/1, validate/2]).
+-export([encode/1, decode/1, validate/1]).
 -on_load(init/0).
 
 init() ->
@@ -144,5 +144,5 @@ reverse_tokens(_) ->
 final_encode(_) ->
     erlang:nif_error(ejson_nif_not_loaded).
 
-validate(_, _) ->
+validate(_) ->
     erlang:nif_error(ejson_nif_not_loaded).
